crates/aura-telemetry/tests/compile_fail/free_string_field.stderr
error[E0277]: the trait bound `String: IntoTelemetryProperty` is not satisfied
 --> tests/compile_fail/free_string_field.rs:6:10
  |
6 | #[derive(Event)]
  |          ^^^^^ the trait `IntoTelemetryProperty` is not implemented for `String`
  |
help: the trait `IntoTelemetryProperty` is implemented for `&str`
 --> src/properties.rs
  |
  | impl IntoTelemetryProperty for &'static str {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the derive macro `Event` (in Nightly builds, run with -Z macro-backtrace for more info)
